# HyperionDumper

./: .gitmodules  CMakeLists.txt  Dissassembler.cpp  Dissassembler.hpp  Dumper.hpp  LICENSE  PEDumper.cpp  PEDumper.hpp  PatternAnalyzer.cpp  PatternAnalyzer.hpp  README.md  main.cpp
PatchTasks/: OpaquePredicateResolver.cpp  OpaquePredicateResolver.hpp
